# rust-local-knowledge-search

./: .gitignore  Cargo.toml  README.md  knowledge_config.json
docs/: config.toml  config.yaml  project_notes.txt  records.csv  rust_ownership.md  rust期末作业要求.docx  tantivy_index.md  test.json  test.yml  tui_design.md
src/: analyzer.rs  app.rs  config.rs  document.rs  errors.rs  highlighter.rs  indexer.rs  lib.rs  main.rs  models.rs  storage.rs  tokenizer.rs  tui.rs  utils.rs
