[package]
name = "local_knowledge_search"
version = "0.2.0"
edition = "2021"
authors = ["Rust Course Student"]
description = "A full local knowledge base search system with TUI, CLI, incremental indexing, history, bookmarks and statistics."
license = "MIT"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
tantivy = "0.22"
ratatui = "0.26"
crossterm = "0.27"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
pdf-extract = "0.7"
docx-rs = "0.4"
zip = "0.6"
quick-xml = "0.31"
jieba-rs = "0.6"

[dev-dependencies]
tempfile = "3.10"
